[package]
name = "free-socks"
version = "0.1.0"
edition = "2021"

[dependencies]
# The usual suspects:
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["net", "io-util", "rt", "sync", "macros"] }
anyhow = "1.0.44"
thiserror = "1.0.30"
log = "0.4.14"
# Content-Type:
mime = "0.3.16"
# Command association:
uuid = { version = "0.8.2", features = ["v4"] }
# EventType enum to string conversion.
strum = { version = "0.22", features = ["derive"] }
# Simple parsing.
regex = "1.5.4"
# Content Types
once_cell = "1.8.0"
derive_more = "0.99.16"
# Parsing JSON content & serde::Value
serde_json = "1.0.68"
serde = "1.0.130"

[dev-dependencies]
tokio-test = "0.4.2"
